# advent-of-code

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  aoc  build.rs  config.yml  flake.nix  metadata  todo.txt
infra/: Dockerfile  customLangs.nix  flake.nix  languages.toml
languages/ada/: run.sh  solution.adb
languages/arturo/: Dockerfile  solution.art
languages/awk/: solution.awk
languages/ballerina/: solution.bal
languages/bash/: solution.sh
languages/borgo/: Dockerfile  solution.brg
languages/c/: run.sh  solution.c
languages/clisp/: solution.lisp
languages/clojure/: solution.clj
languages/cobol/: run.sh  solution.cob
languages/cpp/: solution  solution.cpp
languages/crystal/: solution.cr
languages/d/: .gitignore  run.sh  solution.d
languages/dart/: solution.dart
languages/elixir/: solution.exs
languages/erlang/: run.sh  solution.erl
languages/forth/: solution.fs
languages/fortran/: run.sh  solution.f90
languages/fsharp/: solution.fsx
languages/gleam/: manifest.toml
languages/go/: solution.go
languages/groovy/: solution.groovy
languages/hare/: solution.ha
lib/: _common.sh  add.sh  fetch.sh  new.sh  reset.sh  run.sh  save.sh  set.sh  test.sh  unused.sh
nix/: flake.nix  langOverrides.nix  patchedLanguages.nix
runner/: Cargo.toml  build.rs
runner/src/: main.rs  store.rs  utils.rs
runner/src/commands/: add.rs  clear.rs  demo.rs  fetch.rs  new.rs  rebuild.rs  run.rs  save.rs  set.rs  test.rs  unused.rs  used.rs
runner/tests/: cli.rs
src/: main.rs  utils.rs
test/: Dockerfile  test.bats
tests/: cli.rs
(+521 files in other folders)
