[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28.1"
dotenv = "0.15.0"
md5 = "0.7.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.8", features = ["blocking"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_yaml = "0.9.34"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dev-dependencies]
paste = "1.0.15"

[build-dependencies]
serde_yaml = "0.9.34"
